fix mobile styling issue related to bootstrap container overlapping nav

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   font-weight: 600;
   position:sticky;
   top:0;
+  z-index:1060px;
 }
 
 #title{
